# w3balance

./: .gitignore  LICENSE  deploy-dev.sh  package-lock.json  package.json  tsconfig.json
apps/balancer/: package.json
apps/balancer/src/: index.ts  (+1 more)
apps/database/: package.json
apps/trpc/: package.json  tsconfig.json
apps/ui/: .firebaserc  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/webhook/: Dockerfile  package.json
libs/balancer/: package.json
libs/data/: package.json
libs/environment/: package.json
libs/program/: package.json
libs/raydium/: package.json
smart-contract/: Anchor.toml  package.json
smart-contract/programs/w3balance-contract/: Cargo.toml
smart-contract/programs/w3balance-contract/src/: errors.rs  lib.rs
smart-contract/programs/w3balance-contract/src/instructions/: add_portfolio_token_allocation.rs  create_portfolio.rs  demo_rebalance_portfolio.rs  deposit_portfolio.rs  mod.rs  proxy_init.rs  rebalance_portfolio.rs  withdraw_portfolio.rs  withdrawal_portfolio.rs
smart-contract/tests/: config.ts  pda.ts  util.ts  w3balance-contract.spec.ts  w3balance-contract.ts
w3-balance-contract/: Anchor.toml  package.json
w3-balance-contract/programs/w3balance-contract/: Cargo.toml
w3-balance-contract/programs/w3balance-contract/src/: errors.rs
w3-balance-contract/programs/w3balance-contract/src/instructions/: add_fund_token_allocation.rs  create_fund.rs  mod.rs
w3-balance-contract/tests/: w3balance-contract.ts
w3b-ui/: package.json  tsconfig.app.json
(+47 files in other folders)
